# java-project-analyzer

./: CMakeLists.txt  JavaProjectAnalyzer.make  Makefile  README.md  premake5.lua
include/: analyzer.h  thread_pool.h
src/: analyzer.cpp  main.cpp  thread_pool.cpp
tests/: test.cpp
tests/mixed_files/: File1.java
tests/mixed_files/subfolder/: File2.java  NotAJavaFile.json
tests/single_file/: File.java
